# live555

./: #config.macosx#  .gitignore  .project  .travis.yml  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  COPYING  Doxyfile  Makefile  Makefile.tail  Proxyserver_check_interPacketGap.patch  Proxyserver_check_interPacketGap_2017.01.26.patch  README  README.md  add_port_argument.patch  config.armeb-uclibc  config.armlinux  config.avr32-linux  config.bfin-linux-uclibc  config.bfin-uclinux  config.bsplinux  config.cris-axis-linux-gnu  config.cygwin  config.cygwin-for-vlc  config.env  config.freebsd  config.freebsd-no-openssl  config.iphone-simulator  config.iphoneos  config.linux  config.linux-64bit  config.linux-gdb  config.linux-gdb-no-std-lib  config.linux-gdb-sanitize  config.linux-no-openssl  config.linux-no-std-lib  config.linux-with-shared-libraries  config.linux.orig  config.macosx  (+22 more)
BasicUsageEnvironment/: .cproject  .gitignore  .project  BasicHashTable.cpp  BasicTaskScheduler.cpp  BasicTaskScheduler0.cpp  BasicUsageEnvironment.cpp  BasicUsageEnvironment0.cpp  CMakeLists.txt  DelayQueue.cpp  Makefile  Makefile.tail  project_def.prop
BasicUsageEnvironment/include/: BasicHashTable.hh  BasicUsageEnvironment.hh  BasicUsageEnvironment0.hh  BasicUsageEnvironment_version.hh  DelayQueue.hh  HandlerSet.hh
EpollTaskScheduler/: CMakeLists.txt  EpollTaskScheduler.cpp
EpollTaskScheduler/include/: EpollTaskScheduler.hh
UsageEnvironment/: .cproject  .project  CMakeLists.txt  HashTable.cpp  Makefile  Makefile.tail  UsageEnvironment.cpp  project_def.prop  strDup.cpp
UsageEnvironment/include/: Boolean.hh  CommonIO.hh  Config.hh  HashTable.hh  UsageEnvironment.hh  UsageEnvironment_version.hh  strDup.hh
WindowsAudioInputDevice/: WindowsAudioInputDevice_common.cpp  WindowsAudioInputDevice_common.hh  WindowsAudioInputDevice_mixer.cpp  WindowsAudioInputDevice_mixer.hh  WindowsAudioInputDevice_noMixer.cpp  WindowsAudioInputDevice_noMixer.hh  showAudioInputPorts.cpp
arduino/: ArduinoHelper.cpp  ArduinoHelper.hh  ArduinoStdio.cpp  ArduinoStdio.hh  ArduinoStdioReplace.hh  FileAccess.cpp  FileAccess.hh  FileAccessFILE.hh  FileAccessSD.hh  README.md  (+7 more)
groupsock/: .cproject  .project  CMakeLists.txt  GroupEId.cpp  Groupsock.cpp  GroupsockHelper.cpp  IOHandlers.cpp  Makefile  Makefile.head  Makefile.tail  NetAddress.cpp  NetCommon.cpp  NetInterface.cpp  foo.patch  inet.c  inet.cpp  project_def.prop
groupsock/include/: GroupEId.hh  Groupsock.hh  GroupsockHelper.hh  IOHandlers.hh  NetAddress.hh  NetCommon.h  NetInterface.hh  TunnelEncaps.hh  groupsock_version.hh  inet.hh
hlsProxy/: CMakeLists.txt  Makefile  Makefile.head  Makefile.tail  live555HLSProxy.cpp
liveMedia/: #GenericMediaServer.cpp#  #MatroskaFileParser.cpp#  #OnDemandServerMediaSubsession.cpp#  #RTPInterface.cpp#  .cproject  .project  AACAudioMatroskaFileServerMediaSubsession.cpp  AACAudioMatroskaFileServerMediaSubsession.hh  AC3AudioFileServerMediaSubsession.cpp  AC3AudioMatroskaFileServerMediaSubsession.cpp  AC3AudioMatroskaFileServerMediaSubsession.hh  AC3AudioRTPSink.cpp  AC3AudioRTPSource.cpp  AC3AudioStreamFramer.cpp  ADTSAudioFileServerMediaSubsession.cpp  ADTSAudioFileSource.cpp  ADTSAudioStreamDiscreteFramer.cpp  AMRAudioFileServerMediaSubsession.cpp  AMRAudioFileSink.cpp  AMRAudioFileSource.cpp  AMRAudioRTPSink.cpp  AMRAudioRTPSource.cpp  AMRAudioSource.cpp  AVIFileSink.cpp  AudioInputDevice.cpp  AudioRTPSink.cpp  Base64.cpp  BasicUDPSink.cpp  BasicUDPSource.cpp  BitVector.cpp  BitVector.hh  ByteStreamFileSource.cpp  ByteStreamMemoryBufferSource.cpp  ByteStreamMultiFileSource.cpp  CMakeLists.txt  DVVideoFileServerMediaSubsession.cpp  DVVideoRTPSink.cpp  DVVideoRTPSource.cpp  DVVideoStreamFramer.cpp  DarwinInjector.cpp  (+190 more)
liveMedia/include/: AC3AudioFileServerMediaSubsession.hh  AC3AudioRTPSink.hh  AC3AudioRTPSource.hh  AC3AudioStreamFramer.hh  ADTSAudioFileServerMediaSubsession.hh  ADTSAudioFileSource.hh  ADTSAudioStreamDiscreteFramer.hh  AMRAudioFileServerMediaSubsession.hh  AMRAudioFileSink.hh  AMRAudioFileSource.hh  AMRAudioRTPSink.hh  AMRAudioRTPSource.hh  AMRAudioSource.hh  AVIFileSink.hh  AudioInputDevice.hh  AudioRTPSink.hh  Base64.hh  BasicUDPSink.hh  BasicUDPSource.hh  BitVector.hh  ByteStreamFileSource.hh  ByteStreamMemoryBufferSource.hh  ByteStreamMultiFileSource.hh  DVVideoFileServerMediaSubsession.hh  DVVideoRTPSink.hh  DVVideoRTPSource.hh  DVVideoStreamFramer.hh  DarwinInjector.hh  DeviceSource.hh  DigestAuthentication.hh  FileServerMediaSubsession.hh  FileSink.hh  FramedFileSource.hh  FramedFilter.hh  FramedSource.hh  GSMAudioRTPSink.hh  GenericMediaServer.hh  H261VideoRTPSource.hh  H263plusVideoFileServerMediaSubsession.hh  H263plusVideoRTPSink.hh  (+129 more)
mediaServer/: CMakeLists.txt  DynamicRTSPServer.cpp  DynamicRTSPServer.cpp.orig  DynamicRTSPServer.cpp.rej  DynamicRTSPServer.hh  Makefile  Makefile.head  Makefile.tail  live555MediaServer.cpp  version.hh
proxyServer/: CMakeLists.txt  Makefile  Makefile.tail  live555ProxyServer.cpp  live555ProxyServer.cpp.orig  live555ProxyServer.cpp.save  live555ProxyServer.cpp.test
testProgs/: #playCommon.cpp#  CMakeLists.txt  MPEG2TransportStreamIndexer.cpp  Makefile  Makefile.tail  announceURL.cpp  announceURL.hh  mikeyParse.cpp  openRTSP.cpp  playCommon.cpp  playCommon.hh  playSIP.cpp  registerRTSPStream.cpp  sapWatch.cpp  test.txt  testAMRAudioStreamer.cpp  testDVVideoStreamer.cpp  testDVVideoStreamer.cpp.orig  testGSMStreamer.cpp  testH264VideoStreamer.cpp  testH264VideoStreamer.cpp.orig  testH264VideoToHLSSegments.cpp  testH264VideoToTransportStream.cpp  testH265VideoStreamer.cpp  testH265VideoStreamer.cpp.orig  testH265VideoToTransportStream.cpp  testMKVSplitter.cpp  testMKVStreamer.cpp  testMP3Receiver.cpp  testMP3Streamer.cpp  testMPEG1or2AudioVideoStreamer.cpp  testMPEG1or2AudioVideoToDarwin.cpp  testMPEG1or2ProgramToTransportStream.cpp  testMPEG1or2Splitter.cpp  testMPEG1or2VideoReceiver.cpp  testMPEG1or2VideoStreamer.cpp  testMPEG2TransportReceiver.cpp  testMPEG2TransportStreamSplitter.cpp  testMPEG2TransportStreamTrickPlay.cpp  testMPEG2TransportStreamer.cpp  (+13 more)
(+1516 files in other folders)
